--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title> A Page about Food</title>
     </head>
     <body>
-    Webpage about Food
+    <h1> Breakfast </h1>
+
+    <p> Turkey Bacon </p>
+    <p> Fried Egg on English muffin with swiss cheese </p>
+    <p> Blueberry yogurt with granola </p>
+    <p> <em> Luna Bar </em> </p>
+    <p> <strong> Tea </strong> </p>
+
+    <h1> Lunch </h1>
+
+    <p> Egg salad sandwich on wheat bread</p>
+    <p> Baked Kale Chips </p>
+    <p> String Cheese </p>
+    <p> <em> Cliff Bar </em> </p>
     </body>
     </html>
