--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
     <p> Turkey Bacon </p>
     <p> Fried Egg on English muffin with swiss cheese </p>
     <p> Blueberry yogurt with granola </p>
-    <p> <em> Luna Bar </em> </p>
-    <p> <strong> Tea </strong> </p>
+    <p> <em> <strong> luna Bar</strong> Luna Bar </em> </p>
+     <ul>
+        <li>Tea</li>
+        <li>Hot Coco</li>
+        <li>Apple Juice</li>
+    </ul>
+
 
     <h1> Lunch </h1>
 
     <p> Egg salad sandwich on wheat bread</p>
     <p> Baked Kale Chips </p>
     <p> String Cheese </p>
-    <p> <em> Cliff Bar </em> </p>
+    <p> <em> <strong> cliff bar</strong> Luna Bar </em> </p>
+
+    <ul>
+        <li>Tea</li>
+        <li>Sprite</li>
+        <li>Lemonade</li>
+    </ul>
+
     </body>
     </html>
