--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <p> <em> <strong> luna Bar</strong> Luna Bar </em> </p>
      <ul>
         <li>Tea</li>
-        <li>Hot Coco</li>
+        <li><a href="http://www.nestleusa.com/brands/drinks/abuelita">Abuelita Hot Chocolate</a></li>
         <li>Apple Juice</li>
     </ul>
 
 
     <h1> Lunch </h1>
 
-    <p> Egg salad sandwich on wheat bread</p>
+    <p> Egg salad sandwich on wheat bread <a href="http://cooking.nytimes.com/recipes/1013506-eli-zabars-egg-salad-sandwich">Egg Salad Sandwich</a></p>
     <p> Baked Kale Chips </p>
     <p> String Cheese </p>
     <p> <em> <strong> cliff bar</strong> Luna Bar </em> </p>
