--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p> Fried Egg on English muffin with swiss cheese </p>
     <p> Blueberry yogurt with granola </p>
     <p> <em> <strong> luna Bar</strong> Luna Bar </em> </p>
+    <img src="http://images.clifbarstore.com/imagesEdp/p218443b.jpg" width="300" height="90" alt="Luna Bar">
      <ul>
         <li>Tea</li>
         <li><a href="http://www.nestleusa.com/brands/drinks/abuelita">Abuelita Hot Chocolate</a></li>
@@ -23,6 +24,22 @@
     <p> Egg salad sandwich on wheat bread <a href="http://cooking.nytimes.com/recipes/1013506-eli-zabars-egg-salad-sandwich">Egg Salad Sandwich</a></p>
     <p> Baked Kale Chips </p>
     <p> String Cheese </p>
+
+<table>
+    <tr>
+        <td>Sargento</td>
+        <td>Mozzarella</td>
+    </tr>
+    <tr>
+        <td>Organic Valley</td>
+        <td>Chedder</td>
+    </tr>
+    <tr>
+        <td>Craft</td>
+        <td>Coby</td>
+    </tr>
+</table>
+
     <p> <em> <strong> cliff bar</strong> Luna Bar </em> </p>
 
     <ul>
