--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <!DOCTYPE html> 
     <html lang="en">
     <head> 
+    <link rel="stylesheet" href="style.css">
     <title> A Page about Food</title>
     </head>
     <body>
@@ -12,6 +13,7 @@
     <p> Blueberry yogurt with granola </p>
     <p> <em> <strong> luna Bar</strong> Luna Bar </em> </p>
     <img src="http://images.clifbarstore.com/imagesEdp/p218443b.jpg" width="300" height="90" alt="Luna Bar">
+    <h2> Drinks </h2>
      <ul>
         <li>Tea</li>
         <li><a href="http://www.nestleusa.com/brands/drinks/abuelita">Abuelita Hot Chocolate</a></li>
@@ -25,7 +27,7 @@
     <p> Baked Kale Chips </p>
     <p> String Cheese </p>
 
-<table>
+    <table>
     <tr>
         <td>Sargento</td>
         <td>Mozzarella</td>
@@ -38,10 +40,10 @@
         <td>Craft</td>
         <td>Coby</td>
     </tr>
-</table>
+    </table>
 
     <p> <em> <strong> cliff bar</strong> Luna Bar </em> </p>
-
+    <h2> Drinks </h2>
     <ul>
         <li>Tea</li>
         <li>Sprite</li>
