--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <title> A Page about Food</title>
     </head>
     <body>
-    <h1> Breakfast </h1>
 
-    <p> Turkey Bacon </p>
+    <h1> <span class="Spotlight"> Breakfast </span> </h1>
+
+    <div id="Intro">
+    <p>  Turkey Bacon </p>
+    </div> 
     <p> Fried Egg on English muffin with swiss cheese </p>
     <p> Blueberry yogurt with granola </p>
     <p> <em> <strong> luna Bar</strong> Luna Bar </em> </p>
     <img src="http://images.clifbarstore.com/imagesEdp/p218443b.jpg" width="300" height="90" alt="Luna Bar">
+
     <h2> Drinks </h2>
+
      <ul>
         <li>Tea</li>
         <li><a href="http://www.nestleusa.com/brands/drinks/abuelita">Abuelita Hot Chocolate</a></li>
@@ -43,7 +48,9 @@
     </table>
 
     <p> <em> <strong> cliff bar</strong> Luna Bar </em> </p>
+
     <h2> Drinks </h2>
+
     <ul>
         <li>Tea</li>
         <li>Sprite</li>
